# personal_agent

./: CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-18-personal-agent.md  2026-06-18-rag-improvement.md
docs/superpowers/specs/: 2026-05-18-personal-agent-design.md  2026-06-18-rag-improvement-design.md
personal_agent/: __init__.py  config.py  main.py
personal_agent/cli/: app.py  display.py
personal_agent/core/: agent.py  conversation.py  memory.py  memory_store.py
personal_agent/kb/: embed.py  ingest.py  retrieval.py
personal_agent/tools/: browser.py  kb_ingest.py  kb_list.py  kb_remove.py  kb_search.py  qmc_transform.py  registry.py  web_search.py
tests/: conftest.py  test_agent.py  test_cli.py  test_config.py  test_conversation.py  test_embed.py  test_ingest.py  test_memory.py  test_qmc_transform.py  test_rag_quality.py  test_retrieval.py  test_tool_registry.py  test_tools.py
tests/tools/: test_browser.py
