[project]
name = "personal-agent"
version = "0.1.0"
description = "Personal assistant agent deployed locally"
authors = [
    {name = "andy-c-426",email = "494145587@qq.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "chromadb (>=1.5.9,<2.0.0)",
    "sentence-transformers (>=5.5.0,<6.0.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "tavily-python (>=0.7.24,<0.8.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "openai (>=2.37.0,<3.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "tiktoken (>=0.13.0,<0.14.0)",
    "flagembedding (>=1.4.0,<2.0.0)"
]

[project.scripts]
personal-agent = "personal_agent.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "fpdf2 (>=2.8.7,<3.0.0)"
]
